--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div id="title-box">
           <h4>PHARRELL WILLIAMS</h4>
           
-          <h2></h2>
+          <h2>HAPPY</h2>
           <!-- Level 4 'PHARRELL WILLIAMS' Header -->
 
           <!-- Level 2 'HAPPY' Header -->
