--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
         
         <h1>HAPPY</h1>
         
-        <h3></h3>
-        <!-- Level 1 'HAPPY' Header -->
-
-        <!-- Level 3 'WRITTEN BY...' Header -->
+        <h3>WRITTEN BY PHARRELL WILLIAMS</h3>
 
         <!-- pararaph text 'PUBLISHED BY...' -->
 
