--- a/index.html
+++ b/index.html
@@ -31,15 +31,10 @@
         <span>PHARRELLWILLIAMS.COM</span>
         <img src=https://s3.amazonaws.com/learn-verified/columbia-logo.png alt="Columbia Logo">
         <span>COLUMBIARECORDS.COM</span>
-        <!-- span text 'PHARRELLWILLIAMS.COM' -->
-
-        <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
-
-        <!-- span text 'COLUMBIARECORDS.COM' -->
 
         <br>
 
-        <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
+        <img src=https://s3.amazonaws.com/learn-verified/sony-logo.png alt="Sono Logo">
 
       </div>
     </div>
